--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,9 @@
 
     <!-- Меню -->
     <string name="menu">Меню</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!-- Новые строки -->
+    <string name="disclaimer">Все права на контент принадлежат их законным владельцам. Приложение не несёт ответственности за использование материалов.</string>
 </resources>
