--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,11 +9,15 @@
     <string name="nav_collections">Подборки</string>
     <string name="nav_settings">Настройки</string>
 
+    <!-- Новые строки для FavoritesFragment -->
+    <string name="favorites_title">Избранное</string>
+    <string name="no_favorites">В избранном пока ничего нет</string>
+
     <!-- Меню -->
     <string name="menu">Меню</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <!-- Новые строки -->
-    <string name="disclaimer">Все права на контент принадлежат их законным владельцам. Приложение не несёт ответственности за использование материалов.</string>
+    <string name="disclaimer">Картинки взяты с сайта: https://poster4.me/.</string>
 </resources>
